# teamy-uom-extensions

./: Cargo.toml  README.md  check-all.ps1
.github/workflows/: ci.yml
examples/: combined_human.rs  information_human.rs  information_rate_human.rs  information_rate_math.rs  inspect_humansize_type.rs  time_human.rs
src/: lib.rs
src/human/: mod.rs
src/human/si/: information.rs  information_rate.rs  time.rs
src/rate/: mod.rs
src/rate/si/: information.rs  mod.rs
src/si/: information.rs  information_rate.rs  mod.rs  time.rs
