[package]
name = "teamy-uom-extensions"
version = "0.1.0"
edition = "2024"
authors = ["TeamDman <noreply@example.invalid>"]
description = "Small set of human-friendly display helpers for uom types (humantime + humansize integrations)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TeamDman/teamy-uom-extensions"

[features]
# Enable human readable helpers which depend on `humantime` and `humansize`.
# Storage type features mirror the `uom` crate and allow this extension crate to
# provide helpers for different underlying numeric storage types. The crate
# remains backward compatible by keeping `f64` as a default storage type alias
# at the crate root (unless you explicitly enable multiple storage types).
default = ["human"]
human = ["humantime", "humansize"]

# The SI system from `uom` is required by this crate and enabled by default on the
# `uom` dependency so we don't expose a separate `si` feature here.

# Support the same storage type feature flags as `uom` so callers can opt-in
# for f32/f64 (and we can gate re-exports / implementations accordingly).
# We no longer provide storage-type feature toggles here so callers can choose
# which uom storage-type features they want. The crate remains generic and works
# for all storage types exposed by `uom`.
# Full dev-friendly re-exports for convenience used in demos or quick prototyping.
# When enabled we re-export `uom`, `humansize` and `humantime` from the crate root so
# callers can use `teamy_uom_extensions::uom::...` etc.
full = ["human"]

[dependencies]
# Depend on uom without pulling its default features (so we don't force f32/f64 on
# consumers). The `si` feature is enabled by this crate's `si` feature.
uom = { version = "0.37.0", default-features = false, features = ["si"] }
# Optional dependencies gated behind the `human` feature
humansize = { version = "2.1.3", optional = true }
humantime = { version = "2.3.0", optional = true }

[dev-dependencies]
# For tests and examples, enable typical uom storage features so examples that
# reference `uom::si::f32` and `uom::si::f64` continue to compile.
uom = { version = "0.37.0", default-features = false, features = ["si", "f32", "f64"] }


[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
